# audio-transcriber

./: .env.example  CLAUDE.md  main.py  pyproject.toml
.claude/commands/: plan.md  slice.md
.claude/skills/: README.md
.claude/skills/commit-and-push-reviewed-branch/: SKILL.md
.claude/skills/create-implementation-plan/: SKILL.md
.claude/skills/implement-plan-on-branch/: SKILL.md
.claude/skills/vertical-slice-plan/: SKILL.md
.pi/skills/: commit-and-push-reviewed-branch  create-implementation-plan  implement-plan-on-branch  vertical-slice-plan
.resources/plans/: 001-singleton-transcriber-and-channel-manager.md
.resources/plans/001-singleton-transcriber-and-channel-manager/: 001-singleton-metaclass.md  002-singleton-transcriber.md  003-channel-manager-and-wiring.md
audio_transcriber/: __init__.py  config.py  singleton.py  transcriber.py
audio_transcriber/channels/: __init__.py  base.py  manager.py  telegram.py
tests/: conftest.py
tests/audio_transcriber/: test_config.py  test_singleton.py  test_transcriber.py
tests/audio_transcriber/channels/: test_manager.py  test_telegram.py
