[project]
name = "audio-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "pydantic-settings>=2.14.1",
    "python-telegram-bot>=22.8",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "notebook>=7.5.7",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ['tests']
pythonpath = ['.']
addopts = '--import-mode=importlib'

[tool.ruff]
line-length = 80

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
